--- a/index.html
+++ b/index.html
@@ -38,36 +38,20 @@
                         <p>Выключить весь свет в доме и во дворе.</p>
                     </div>
                     <div class="item">
-                        <img src="fromya/guide/assets/icon_sun_1x.png" alt="sun">
-                        <p>Выключить весь свет в доме и во дворе.</p>
+                        <img src="fromya/guide/assets/icon_scheduled@1x.png" alt="sun">
+                        <p>Я ухожу.</p>
                     </div>
                     <div class="item">
                         <img src="fromya/guide/assets/icon_sun_1x.png" alt="sun">
-                        <p>Выключить весь свет в доме и во дворе.</p>
+                        <p>Включить свет в коридоре.</p>
                     </div>
                     <div class="item">
-                        <img src="fromya/guide/assets/icon_sun_1x.png" alt="sun">
-                        <p>Выключить весь свет в доме и во дворе.</p>
+                        <img src="fromya/guide/assets/icon_temperature_2@1x.png" alt="sun">
+                        <p>Набрать горячую ванну.</p>
                     </div>
                     <div class="item">
-                        <img src="fromya/guide/assets/icon_sun_1x.png" alt="sun">
-                        <p>Выключить весь свет в доме и во дворе.</p>
-                    </div>
-                    <div class="item">
-                        <img src="fromya/guide/assets/icon_sun_1x.png" alt="sun">
-                        <p>Выключить весь свет в доме и во дворе.</p>
-                    </div>
-                    <div class="item">
-                        <img src="fromya/guide/assets/icon_sun_1x.png" alt="sun">
-                        <p>Выключить весь свет в доме и во дворе.</p>
-                    </div>
-                    <div class="item">
-                        <img src="fromya/guide/assets/icon_sun_1x.png" alt="sun">
-                        <p>Выключить весь свет в доме и во дворе.</p>
-                    </div>
-                    <div class="item">
-                        <img src="fromya/guide/assets/icon_sun_1x.png" alt="sun">
-                        <p>Выключить весь свет в доме и во дворе.</p>
+                        <img src="fromya/guide/assets/icon_temperature_2@1x.png" alt="sun">
+                        <p>Сделать пол тёплым во всей квартире.</p>
                     </div>
                 </div> <!-- items -->
             </div> <!-- main-controls -->
@@ -75,7 +59,7 @@
         <div class="favorites">
             <img class="scroll-arrows" id="device-scroll-right" src="fromya/guide/assets/arrows_right.png" alt="right">
             <img class="scroll-arrows" id="device-scroll-left" src="fromya/guide/assets/arrows_left.png" alt="left">
-            <p>Избранные устройства</p>
+            <p>Избранные устройства<span>Все<img src="fromya/guide/assets/Icons/arrow-down.svg"</span></p>
             <ul>
                 <li class="favorites-list-items">Все</li>
                 <li class="favorites-list-items">Кухня</li>
@@ -85,7 +69,7 @@
             </ul>
         </div> <!-- favorites -->
         <div class="device-cards">
-            <div class="device-card">
+            <div class="device-card" id="xiaomi">
                     <img src="fromya/guide/assets/icon_sun_1x.png" alt="sun">
                     <p class="device-name">Xiaomi Yeelight LED Smart Bulb</p>
                     <p class="device-status">Включено</p>
@@ -129,6 +113,26 @@
                 <li><a href="#">Условия использования</a></li>
             </ul>
         </div>
+        <div class="popup-wrapper">
+            <div class="popup-controls">
+                <img class="popup-icon" src="fromya/guide/assets/icon_sun_2@2x.png" alt="sun">
+                <h2 class="popup-name">Xiaomi Yeelight LED Smart Bulb</h2>
+                <p class="popup-status">Включится в 17:00</p>
+                <ul class="options">
+                    <li class="option">Вручную</li>
+                    <li class="option">Дневной свет</li>
+                    <li class="option">Вечерний свет</li>
+                    <li class="option">Рассвет</li>
+                </ul> <!-- options -->
+                <div class="popup-drag-ball">
+                    <img class="ball" src="fromya/circle-thin-small.png">
+                </div> <!-- popup-drag-ball -->
+            </div> <!-- popup-controls -->
+            <div class="popup-buttons">
+                <p class="popup-button1" id="popup-apply">Применить</p>
+                <p class="popup-button1" id="popup-close">Закрыть</p>
+            </div>
+        </div> <!-- popup-wrapper -->
     </div> <!-- wrapper -->
 
     <script src="js/main.js"></script>
